# e-commerce

./: .gitignore  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: toggle.js
frontend/src/context/: ThemeContext.js
frontend/src/pages/: HomeScreen.js
frontend/src/styles/: HomeScreen.css
src/: App.css  App.js  index.css
src/pages/: HomeScreen.js  Landing.js
src/styles/: HomeScreen.css
